--- a/html work/3/ex01.html
+++ b/html work/3/ex01.html
@@ -6,6 +6,9 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>내용바꿈</h1>dddd
+  <h1>내용바꿈</h1>
+  <p><strong>안녕하세요. 환영합니다.</strong> <br><b>줄</b>을 바꿔 볼게요.</p>
+  <p><em>하하하하하</em></p>
+  <p><i>하하하하하</i></p>
 </body>
 </html>
