--- a/html work/3/ex03.html
+++ b/html work/3/ex03.html
@@ -12,7 +12,7 @@
   <h1>상품 구성</h1>
   <img src="image/image.png" alt="orange">
   <table>
-    <caption>선물용과 가정용 상품 구성</caption>
+    <caption style="text-align: left;"><b>선물용과 가정용 상품 구성</b></caption>
     <colgroup>
       <col style="background-color: #ccc;">
       <col>
