--- a/html work/4/ex02.html
+++ b/html work/4/ex02.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    a{text-decoration: none;}
+    a {
+      text-decoration: none;
+    }
   </style>
 </head>
+
 <body>
   <h1>ex02</h1>
   <p><a href="ex01.html">같은 경로에 있는 ex01.html</a></p>
   <p><a href="../1/ex01.html">다른 경로에 있는 ex01.html</a></p>
-  <p><a href="https://www.naver.com" target="_blank">
-    <img src="image.png" alt="" width="200">
-  </a></p>
+  <p>
+    <a href="https://www.naver.com" target="_blank">
+      <img src="image.png" alt="이미지 삽입 파일 실패 시 뜨는 문구" width="200"></a>
+  </p>
 </body>
+
 </html>
