--- a/html work/4/exam2.html
+++ b/html work/4/exam2.html
@@ -13,7 +13,7 @@
     <h1>수습 국원 지원 양식</h1>
     <colgroup>
       <col>
-      <col>
+      <col style="width: 100px;">
       <col rowspan="4" style="width: 200px;">
     </colgroup>
     <tr>
@@ -22,12 +22,10 @@
       <td></td>
     </tr>
     <tr>
-      <!-- <td>개인정보</td> -->
       <th>학과/학번</th>
       <td></td>
     </tr>
     <tr>
-      <!-- <td>개인정보</td> -->
       <th>연락처</th>
       <td></td>
     </tr>
