--- a/html work/18/school2.html
+++ b/html work/18/school2.html
@@ -1,215 +1,293 @@
+<!-- <li><label for="">최근 접속시간: </label> <input type="text" value=" 2024-07-31 15:00"></li>
+<li><label for="">학적상태: </label><input type="text" value="재학"></li> -->
 <!DOCTYPE html>
 <html>
-<head>
-<title>미니언즈 대학교 학사관리 시스템</title>
-<style>
-body {
-    font-family: 'Bello', sans-serif; /* 미니언즈 글꼴 */
-    background-color: #f0f0f0;
-}
-
-.header {
-    background-color: #FFC300;
-    color: #fff;
-    padding: 15px;
-    text-align: center;
-}
-
-.container {
-    max-width: 960px;
-    margin: 0 auto;
-    padding: 20px;
-    display: flex; /* Flexbox 사용 */
-}
-
-.profile-container {
-    width: 30%;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    margin-right: 20px;
-}
-
-.profile-picture {
-    width: 100%;
-    height: auto;
-    border-radius: 50%;
-    margin-bottom: 20px;
-}
-
-.profile-info {
-    text-align: center;
-}
-
-.profile-info h2 {
-    margin-bottom: 10px;
-}
-
-.profile-info p {
-    margin: 5px 0;
-}
-
-.tabs-container {
-    width: 70%;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-.tab {
-    display: none; /* 기본적으로 탭 내용 숨김 */
-}
-
-.tab.active {
-    display: block; /* 활성화된 탭 내용 보이기 */
-}
-
-.tab-button {
-    background-color: #FFC300; /* 미니언즈 노란색 */
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-right: 10px;
-}
-
-.tab-button.active {
-    background-color: #FFA500; /* 더 진한 노란색 */
-}
-
-.tab-content {
-    margin-top: 20px;
-}
-
-.tab-content ul {
-    list-style: none;
-    padding: 0;
-}
-
-.tab-content li {
-    margin-bottom: 10px;
-}
-</style>
-</head>
-<body>
+  <head>
+    <title>미니언즈 대학교 학사관리 시스템</title>
+    <link rel="stylesheet" href="school2.css" />
+  </head>
+  <body>
     <div class="header">
-        <h1>미니언즈 대학교 학사관리 시스템</h1>
+      <a href="school2.html"><h1>미니언즈 대학교 학사관리 시스템</h1></a>
     </div>
-<div class="container">
-    <div class="profile-container">
-        <img class="profile-picture" src="images/bob.jpg" alt="미니언 프로필 사진">
-        <div class="profile-info">
+    <div style="height: 100px"></div>
+    <div class="sidenav">
+      <!-- <a href="#" style="text-align: left; margin-left: 23px; font-size: 1.3rem;">홈</a> -->
+      <a href="#">학생정보</a>
+      <a href="#">수강신청</a>
+      <a href="#">성적조회</a>
+      <a href="#">졸업관리</a>
+    </div>
+    <div class="main">
+      <div class="container" id="minion-container-1">
+        <div class="profile-container">
+          <img
+            class="profile-picture"
+            src="images/bob.jpg"
+            alt="미니언 프로필 사진"
+          />
+          <div class="profile-info">
             <h2>밥</h2>
-            <p>소속: 바나나 학과</p>
+            <p>전공: 바나나 학과</p>
             <p>학번: 20230001</p>
             <p>학년: 1학년</p>
+          </div>
         </div>
-    </div>
-    <div class="tabs-container">
-        <button class="tab-button active" onclick="openTab('학생정보')">학생정보</button>
-        <button class="tab-button" onclick="openTab('학생서비스')">학생서비스</button>
-        <div id="학생정보" class="tab active">
+        <div class="tabs-container">
+          <button
+            class="tab-button active"
+            onclick="openTab('minion-container-1', 'bob-tab-1')"
+          >
+            학생정보
+          </button>
+          <button
+            class="tab-button"
+            onclick="openTab('minion-container-1', 'bob-tab-2')"
+          >
+            학생서비스
+          </button>
+          <div id="bob-tab-1" class="tab active">
             <div class="tab-content">
-                <ul>
-                    <li>최근 접속시간: 2024-07-31 15:00</li>
-                    <li>학적상태: 재학</li>
-                    <li>ㅁㄴㅇㄹㅇㄴㅁㄹㄴㅁㅇㄹ</li>
-                </ul>
+              <table>
+                <tr>
+                  <th>학기</th>
+                  <th style="width: 180px">교과목</th>
+                  <th style="width: 50px">학점</th>
+                  <th style="width: 50px">등급</th>
+                </tr>
+                <tr>
+                  <td rowspan="3">23학년 1학기</td>
+                  <td>바나나 재배학</td>
+                  <td>3</td>
+                  <td>A</td>
+                </tr>
+                <tr>
+                  <td>바나나 요리학</td>
+                  <td>3</td>
+                  <td>A</td>
+                </tr>
+                <tr>
+                  <td>바나나 심리학</td>
+                  <td>3</td>
+                  <td>A</td>
+                </tr>
+                <tr>
+                  <td rowspan="3">23학년 2학기</td>
+                  <td>세계 악당 역사</td>
+                  <td>3</td>
+                  <td>A</td>
+                </tr>
+                <tr>
+                  <td>악당 심리학</td>
+                  <td>3</td>
+                  <td>A</td>
+                </tr>
+                <tr>
+                  <td>악당 패션 디자인</td>
+                  <td>3</td>
+                  <td>A</td>
+                </tr>
+              </table>
             </div>
-        </div>
-        <div id="학생서비스" class="tab">
+          </div>
+          <div id="bob-tab-2" class="tab">
             <div class="tab-content">
-                <ul>
-                    <li>학사행정 문의</li>
-                    <li>장학금 신청</li>
-                    <li>...</li>
-                </ul>
+              <ul>
+                <li>학사행정 문의</li>
+                <li>장학금 신청</li>
+                <li>...</li>
+              </ul>
             </div>
+          </div>
         </div>
-    </div>
-</div>
-<div class="container">
-    <div class="profile-container">
-        <img class="profile-picture" src="images/stuart.jpg" alt="미니언 프로필 사진">
-        <div class="profile-info">
+      </div>
+      <div class="container" id="minion-container-2">
+        <div class="profile-container">
+          <img
+            class="profile-picture"
+            src="images/stuart.jpg"
+            alt="미니언 프로필 사진"
+          />
+          <div class="profile-info">
             <h2>스튜어트</h2>
-            <p>소속: 바나나 학과</p>
+            <p>전공: 바나나 학과</p>
             <p>학번: 20230002</p>
             <p>학년: 1학년</p>
+          </div>
         </div>
-    </div>
-    <div class="tabs-container">
-        <button class="tab-button active" onclick="openTab('학생정보')">학생정보</button>
-        <button class="tab-button" onclick="openTab('학생서비스')">학생서비스</button>
-        <div id="학생정보" class="tab active">
+        <div class="tabs-container">
+          <button
+            class="tab-button active"
+            onclick="openTab('minion-container-2', 'stuart-tab-1')"
+          >
+            학생정보
+          </button>
+          <button
+            class="tab-button"
+            onclick="openTab('minion-container-2', 'stuart-tab-2')"
+          >
+            학생서비스
+          </button>
+          <div id="stuart-tab-1" class="tab active">
             <div class="tab-content">
+              <table>
+                <tr>
+                  <th>학기</th>
+                  <th style="width: 180px">교과목</th>
+                  <th style="width: 50px">학점</th>
+                  <th style="width: 50px">등급</th>
+                </tr>
+                <tr>
+                  <td rowspan="3">23학년 1학기</td>
+                  <td>바나나 재배학</td>
+                  <td>3</td>
+                  <td>A</td>
+                </tr>
+                <tr>
+                  <td>바나나 요리학</td>
+                  <td>3</td>
+                  <td>A</td>
+                </tr>
+                <tr>
+                  <td>바나나 심리학</td>
+                  <td>3</td>
+                  <td>A</td>
+                </tr>
+                <tr>
+                  <td rowspan="3">23학년 2학기</td>
+                  <td>세계 악당 역사</td>
+                  <td>3</td>
+                  <td>A</td>
+                </tr>
+                <tr>
+                  <td>악당 심리학</td>
+                  <td>3</td>
+                  <td>A</td>
+                </tr>
+                <tr>
+                  <td>악당 패션 디자인</td>
+                  <td>3</td>
+                  <td>A</td>
+                </tr>
+              </table>
+              <fieldset>
                 <ul>
-                    <li>최근 접속시간: 2024-07-31 15:00</li>
-                    <li>학적상태: 재학</li>
-                    <li>ㅁㄴㅇㄹㅇㄴㅁㄹㄴㅁㅇㄹ</li>
+                    <li>asdfsdafsdafsdafsdafsadfsdafasdf</li>
+                    <li>asdfsdafsdafsdafsdafsadfsdafasdf</li>
+                    <li>asdfsdafsdafsdafsdafsadfsdafasdf</li>
                 </ul>
+              </fieldset>
             </div>
-        </div>
-        <div id="학생서비스" class="tab">
+          </div>
+          <div id="stuart-tab-2" class="tab">
             <div class="tab-content">
-                <ul>
-                    <li>학사행정 문의</li>
-                    <li>장학금 신청</li>
-                    <li>...</li>
-                </ul>
+              <ul>
+                <li>학사행정 문의</li>
+                <li>장학금 신청</li>
+                <li>...</li>
+              </ul>
             </div>
+          </div>
         </div>
-    </div>
-</div>
-<div class="container">
-    <div class="profile-container">
-        <img class="profile-picture" src="images/dave.jpg" alt="미니언 프로필 사진">
-        <div class="profile-info">
+      </div>
+      <div class="container" id="minion-container-3">
+        <div class="profile-container">
+          <img
+            class="profile-picture"
+            src="images/dave.jpg"
+            alt="미니언 프로필 사진"
+          />
+          <div class="profile-info">
             <h2>데이브</h2>
-            <p>소속: 바나나 학과</p>
+            <p>전공: 바나나 학과</p>
             <p>학번: 20230003</p>
             <p>학년: 1학년</p>
+          </div>
         </div>
-    </div>
-    <div class="tabs-container">
-        <button class="tab-button active" onclick="openTab('학생정보')">학생정보</button>
-        <button class="tab-button" onclick="openTab('학생서비스')">학생서비스</button>
-        <div id="학생정보" class="tab active">
+        <div class="tabs-container">
+          <button
+            class="tab-button active"
+            onclick="openTab('minion-container-3', 'dave-tab-1')"
+          >
+            학생정보
+          </button>
+          <button
+            class="tab-button"
+            onclick="openTab('minion-container-3', 'dave-tab-2')"
+          >
+            학생서비스
+          </button>
+          <div id="dave-tab-1" class="tab active">
             <div class="tab-content">
-                <ul>
-                    <li>최근 접속시간: 2024-07-31 15:00</li>
-                    <li>학적상태: 재학</li>
-                    <li>ㅁㄴㅇㄹㅇㄴㅁㄹㄴㅁㅇㄹ</li>
-                </ul>
+              <table>
+                <tr>
+                  <th>학기</th>
+                  <th style="width: 180px">교과목</th>
+                  <th style="width: 50px">학점</th>
+                  <th style="width: 50px">등급</th>
+                </tr>
+                <tr>
+                  <td rowspan="3">23학년 1학기</td>
+                  <td>바나나 재배학</th>
+                  <td>3</td>
+                  <td>A</td>
+                </tr>
+                <tr>
+                  <td>바나나 요리학</td>
+                  <td>3</td>
+                  <td>A</td>
+                </tr>
+                <tr>
+                  <td>바나나 심리학</td>
+                  <td>3</td>
+                  <td>A</td>
+                </tr>
+                <tr>
+                  <td rowspan="3"><b>23학년 2학기</b></td>
+                  <td><b>세계 악당 역사</b></td>
+                  <td>3</td>
+                  <td>A</td>
+                </tr>
+                <tr>
+                  <td><b>악당 심리학</b></td>
+                  <td>3</td>
+                  <td>A</td>
+                </tr>
+                <tr>
+                  <td><b>악당 패션 디자인</b></td>
+                  <td>3</td>
+                  <td>A</td>
+                </tr>
+              </table>
             </div>
-        </div>
-        <div id="학생서비스" class="tab">
+          </div>
+          <div id="dave-tab-2" class="tab">
             <div class="tab-content">
-                <ul>
-                    <li>학사행정 문의</li>
-                    <li>장학금 신청</li>
-                    <li>...</li>
-                </ul>
+              <ul>
+                <li>학사행정 문의</li>
+                <li>장학금 신청</li>
+                <li>...</li>
+              </ul>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-</div>
 
-<script>
-function openTab(tabName) {
-    var i;
-    var tabs = document.getElementsByClassName("tab");
-    var tabButtons = document.getElementsByClassName("tab-button");
-    for (i = 0; i < tabs.length; i++) {
-        tabs[i].style.display = "none";
-        tabButtons[i].classList.remove("active");
-    }
-    document.getElementById(tabName).style.display = "block";
-    event.currentTarget.classList.add("active");
-}
-</script>
-</body>
+    <script>
+      function openTab(containerId, tabName) {
+        let container = document.getElementById(containerId);
+        let tabs = container.getElementsByClassName("tab");
+        let tabButtons = container.getElementsByClassName("tab-button");
+
+        for (let i = 0; i < tabs.length; i++) {
+          tabs[i].style.display = "none";
+          tabButtons[i].classList.remove("active");
+        }
+
+        container.querySelector("#" + tabName).style.display = "block";
+        event.currentTarget.classList.add("active");
+      }
+    </script>
+  </body>
 </html>
