--- a/html work/18/school2.html
+++ b/html work/18/school2.html
@@ -88,6 +88,13 @@
                   <td>A</td>
                 </tr>
               </table>
+              <fieldset>
+                <ul>
+                    <li> <img src="images/icon.jpg" alt=""> asdfsdafsdafsdafsdafsadfsdafasdf</li>
+                    <li> <img src="images/icon.jpg" alt=""> asdfsdafsdafsdafsdafsadfsdafasdf</li>
+                    <li> <img src="images/icon.jpg" alt=""> asdfsdafsdafsdafsdafsadfsdafasdf</li>
+                </ul>
+              </fieldset>
             </div>
           </div>
           <div id="bob-tab-2" class="tab">
@@ -172,9 +179,11 @@
               </table>
               <fieldset>
                 <ul>
-                    <li>asdfsdafsdafsdafsdafsadfsdafasdf</li>
-                    <li>asdfsdafsdafsdafsdafsadfsdafasdf</li>
-                    <li>asdfsdafsdafsdafsdafsadfsdafasdf</li>
+                    <li> <img src="images/icon.jpg" alt=""> asdfsdafsdafsdafsdafsadfsdafasdf</li>
+                    <li> <img src="images/icon.jpg" alt=""> asdfsdafsdafsdafsdafsadfsdafasdf</li>
+                    <li> <img src="images/icon.jpg" alt=""> asdfsdafsdafsdafsdafsadfsdafasdf</li>
+                    <li> <img src="images/icon.jpg" alt=""> asdfsdafsdafsdafsdafsadfsdafasdf</li>
+                    <li> <img src="images/icon.jpg" alt=""> asdfsdafsdafsdafsdafsadfsdafasdf</li>
                 </ul>
               </fieldset>
             </div>
@@ -259,6 +268,13 @@
                   <td>A</td>
                 </tr>
               </table>
+              <fieldset>
+                <ul>
+                    <li> <img src="images/icon.jpg" alt=""> asdfsdafsdafsdafsdafsadfsdafasdf</li>
+                    <li> <img src="images/icon.jpg" alt=""> asdfsdafsdafsdafsdafsadfsdafasdf</li>
+                    <li> <img src="images/icon.jpg" alt=""> asdfsdafsdafsdafsdafsadfsdafasdf</li>
+                </ul>
+              </fieldset>
             </div>
           </div>
           <div id="dave-tab-2" class="tab">
