--- a/html work/18/minions_uni.html
+++ b/html work/18/minions_uni.html
@@ -6,19 +6,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>미니언즈 대학교 학사관리 시스템</title>
-    <link rel="stylesheet" href="school2.css">
+    <link rel="stylesheet" href="minions_uni.css">
   </head>
   <body>
     <div class="header">
       <a href="school2.html"><h1>미니언즈 대학교 학사관리 시스템</h1></a>
     </div>
-    <div style="height: 100px"></div>
     <div class="sidenav">
       <a href="#">학생정보</a>
       <a href="#">수강신청</a>
       <a href="#">성적조회</a>
       <a href="#">졸업관리</a>
     </div>
+    <div style="height: 100px"></div>
     <div class="professor-info">
       <div class="profile-container1">
         <img src="images/gru.png" alt="교수님 프로필 사진" class="gru">
@@ -28,6 +28,7 @@
           <a href="#" class="logout-button">로그아웃</a>
         </div>
       </div>
+      <hr style="width: 100%;">
       <div class="menu-container">
         <a href="#">시작하기</a>
         <a href="#">쪽지 21</a>
@@ -280,7 +281,7 @@
                 <ul>
                     <li> <img src="images/icon.jpg" alt=""> 학사행정 문의 </li>
                     <li> <img src="images/icon.jpg" alt=""> 장학금 신청 </li>
-                    <li> <img src="images/icon.jpg" alt=""> </li>
+                    <li> <img src="images/icon.jpg" alt=""> asdfasdfda </li>
                 </ul>
               </fieldset>
             </div>
@@ -291,17 +292,14 @@
     <footer>
       <div class="footer-content">
           <div class="footer-logo">
-              <img src="images/minions_uni.png" alt="미니언즈 대학교 로고"> 
+              <a href="https://www.instagram.com/minions/" target="_blank"><img src="images/minions_uni.png" alt="미니언즈 대학교 로고"></a>
           </div>
           <div class="footer-address">
               <p>
-                  (40404) 바나나시 바나나구 바나나대로 1234
+                  (40404) 바나나시 바나나구 바나나대로 1234 Copyright © 2024 MINIONS UNIVERSITY. All rights reserved.
                   <br>
                   TEL: 053-123-4567   FAX: 053-123-4568
               </p>
-          </div>
-          <div class="copyright">
-              <p>Copyright © 2024 MINIONS UNIVERSITY. All rights reserved.</p>
           </div>
           <div class="footer-links">
               <a href="#">개인정보처리방침</a> |
