--- a/html work/minions/minions_uni.html
+++ b/html work/minions/minions_uni.html
@@ -1,5 +1,4 @@
-<!-- <li><label for="">최근 접속시간: </label> <input type="text" value=" 2024-07-31 15:00"></li>
-<li><label for="">학적상태: </label><input type="text" value="재학"></li> -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,7 +9,7 @@
   </head>
   <body>
     <div class="header">
-      <a href="school2.html"><h1>미니언즈 대학교 학사관리 시스템</h1></a>
+      <a href="minions_uni.html"><h1>미니언즈 대학교 학사관리 시스템</h1></a>
     </div>
     <div class="sidenav">
       <a href="#">학생정보</a>
@@ -30,9 +29,9 @@
       </div>
       <hr style="width: 100%;">
       <div class="menu-container">
-        <a href="#">시작하기</a>
-        <a href="#">쪽지 21</a>
-        <a href="#">해피빈 10</a>
+        <a href="#">강의관리</a>
+        <a href="#">학생정보</a>
+        <a href="#">과제관리</a>
       </div>
     </div>
     <div class="main">
@@ -41,8 +40,7 @@
           <img
             class="profile-picture"
             src="images/bob.jpg"
-            alt="미니언 프로필 사진"
-          />
+            alt="미니언 프로필 사진"/>
           <div class="profile-info">
             <h2>밥</h2>
             <p>전공: 바나나 학과</p>
