--- a/html work/minions/minions_uni.html
+++ b/html work/minions/minions_uni.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>미니언즈 대학교 학사관리 시스템</title>
-    <link rel="stylesheet" href="minions_uni.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="minions_uni.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="header">
@@ -133,9 +136,18 @@
             <div class="tab-content">
               <fieldset>
                 <ul>
-                  <li><img src="images/icon.jpg" alt="" />2024-05-03: 짝사랑 고민 상담. 용기 내어 고백할 수 있도록 격려</li>
-                  <li><img src="images/icon.jpg" alt="" />2024-06-05: 발명 아이디어 구체화 관련 상담. 특허 출원 절차 안내</li>
-                  <li><img src="images/icon.jpg" alt="" />2024-07-22: 로켓 제작 동아리 활동 관련 안전 교육</li>
+                  <li>
+                    <img src="images/icon.jpg" alt="" />2024-05-03: 짝사랑 고민
+                    상담. 용기 내어 고백할 수 있도록 격려
+                  </li>
+                  <li>
+                    <img src="images/icon.jpg" alt="" />2024-06-05: 발명
+                    아이디어 구체화 관련 상담. 특허 출원 절차 안내
+                  </li>
+                  <li>
+                    <img src="images/icon.jpg" alt="" />2024-07-22: 로켓 제작
+                    동아리 활동 관련 안전 교육
+                  </li>
                 </ul>
               </fieldset>
             </div>
@@ -238,9 +250,18 @@
             <div class="tab-content">
               <fieldset>
                 <ul>
-                  <li><img src="images/icon.jpg" alt="" />2024-05-10: 기숙사 방 배정 불만 상담. 룸메이트와의 갈등 해결 방안 모색</li>
-                  <li><img src="images/icon.jpg" alt="" />2024-06-20: 악당 퇴치 동아리 활동 관련 고민 상담. 진로 상담 예약</li>
-                  <li><img src="images/icon.jpg" alt="" />2024-07-15: 바나나 알레르기 관련 상담. 바나나 대체 식품 추천</li>
+                  <li>
+                    <img src="images/icon.jpg" alt="" />2024-05-10: 기숙사 방
+                    배정 불만 상담. 룸메이트와의 갈등 해결 방안 모색
+                  </li>
+                  <li>
+                    <img src="images/icon.jpg" alt="" />2024-06-20: 악당 퇴치
+                    동아리 활동 관련 고민 상담. 진로 상담 예약
+                  </li>
+                  <li>
+                    <img src="images/icon.jpg" alt="" />2024-07-15: 바나나
+                    알레르기 관련 상담. 바나나 대체 식품 추천
+                  </li>
                 </ul>
               </fieldset>
             </div>
@@ -343,9 +364,18 @@
             <div class="tab-content">
               <fieldset>
                 <ul>
-                  <li><img src="images/icon.jpg" alt="" />2024-05-28: 시험 불안 극복 관련 상담. 스트레스 관리 기법 안내</li>
-                  <li><img src="images/icon.jpg" alt="" />2024-06-12: 외로움 극복 관련 상담. 친구 사귀는 방법 조언</li>
-                  <li><img src="images/icon.jpg" alt="" />2024-07-02: 기타 연주 실력 향상 관련 상담. 음악 동아리 가입 추천</li>
+                  <li>
+                    <img src="images/icon.jpg" alt="" />2024-05-28: 시험 불안
+                    극복 관련 상담. 스트레스 관리 기법 안내
+                  </li>
+                  <li>
+                    <img src="images/icon.jpg" alt="" />2024-06-12: 외로움 극복
+                    관련 상담. 친구 사귀는 방법 조언
+                  </li>
+                  <li>
+                    <img src="images/icon.jpg" alt="" />2024-07-02: 기타 연주
+                    실력 향상 관련 상담. 음악 동아리 가입 추천
+                  </li>
                 </ul>
               </fieldset>
             </div>
@@ -399,7 +429,7 @@
 
   let footer = document.querySelectorAll(".footer-links a");
   for (let i = 0; i < footer.length; i++) {
-    if (i < footer.length-1){
+    if (i < footer.length - 1) {
       footer[i].textContent += " | ";
     }
   }
